fix: slider visibility on mac

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -354,8 +354,6 @@ input[type=range]:focus {
 }
 input[type=range]::-webkit-slider-runnable-track {
     background: #808080;
-    border: 0.2px solid #010101;
-    border-radius: 3px;
     width: 100%;
     height: 2px;
     cursor: pointer;
